code improved stats added in skill_set
