# spinn_node/backend/model/user-data.js
@@ -81,6 +81,14 @@ skill_set: [{
     },
     topic:{
         type: String
+    },
+    stats: {
+        attempted: {
+            type: String
+        },
+        correct: {
+            type: String
+        }
     }
 }],
 questions: {
